--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.1 
   smooth_page_indicator: ^1.0.0+2
+  connectivity_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +31,15 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets: 
+    - assets/
+    - assets/images/
+  fonts: 
+    - family: Rubik
+      fonts: 
+        - asset: assets/fonts/Rubik-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Rubik-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Rubik-Light.ttf
+          weight: 300
